--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,10 @@
 <ion-content>
   <div class="container-menu">
     <div class="div-child div-img">
-      <img src="/assets/logo.jpg" alt="Bienvendio" class="img-welcome" />
+      <img src="/assets/logo.png" alt="Bienvendio" class="img-welcome" />
     </div>
     <div class="div-child">
-      <h2>Bienvenido a la app</h2>
+      <h2>Bienvenido al relevamiento visual</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime cumque
         iure, numquam eveniet voluptatibus pariatur? Dicta itaque non beatae
@@ -16,7 +16,7 @@
         shape="round"
         color="danger"
         expand="full"
-        class="mb-4"
+        class="mb-3"
         routerLink="/login"
         >Iniciar Sesión</ion-button
       >
