--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   <div class="formbold-form-wrapper">
     <form>
       <div class="justify-center">
-        <img src="assets/splash.png" alt="icono" class="img-icon" />
+        <img src="assets/logo.png" alt="icono" class="img-icon" />
       </div>
       <div class="formbold-form-title">
         <h2 class="">Login</h2>
