--- a/src/global.scss
+++ b/src/global.scss
@@ -38,6 +38,8 @@
 
 body {
   font-family: Roboto, sans-serif;
+  background-color: #f7fff7;
+  color: #1a535c;
 }
 
 .mb-3 {
@@ -48,4 +50,165 @@ body {
 }
 .mb-1 {
   margin-bottom: 1rem;
+}
+
+.img-icon {
+  height: 150px;
+}
+.justify-center {
+  display: flex;
+  justify-content: center;
+}
+.justify-between {
+  display: flex;
+  justify-content: space-between;
+}
+.formbold-mb-3 {
+  margin-bottom: 15px;
+}
+.mb-4 {
+  margin-bottom: 25px;
+}
+.formbold-relative {
+  position: relative;
+}
+.formbold-opacity-0 {
+  opacity: 0;
+}
+.formbold-stroke-current {
+  stroke: currentColor;
+}
+#supportCheckbox:checked ~ div span {
+  opacity: 1;
+}
+
+.formbold-main-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 48px;
+}
+
+.formbold-form-wrapper {
+  margin: 0 auto;
+  max-width: 570px;
+  width: 100%;
+  background-color: #f7fff7;
+  padding: 40px;
+}
+
+.formbold-img {
+  margin-bottom: 45px;
+}
+
+.formbold-form-title {
+  margin-bottom: 30px;
+}
+.formbold-form-title h2 {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 34px;
+}
+.formbold-form-title p {
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 12px;
+}
+
+.formbold-input-flex {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+.formbold-input-flex > div {
+  width: 50%;
+}
+.formbold-form-input {
+  width: 100%;
+  padding: 13px 22px;
+  border-radius: 5px;
+  border: 1px solid #dde3ec;
+  background: #f7fff7;
+  font-weight: 500;
+  font-size: 16px;
+  color: #536387;
+  outline: none;
+  resize: none;
+}
+.formbold-form-input:focus {
+  border-color: #ad000d;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+}
+.formbold-form-label {
+  color: #536387;
+  font-size: 14px;
+  line-height: 24px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.formbold-checkbox-label {
+  display: flex;
+  cursor: pointer;
+  user-select: none;
+  font-size: 16px;
+  line-height: 24px;
+}
+.formbold-checkbox-label a {
+  margin-left: 5px;
+  color: #ad000d;
+}
+.formbold-input-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+.formbold-checkbox-inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  margin-right: 16px;
+  margin-top: 2px;
+  border: 0.7px solid #dde3ec;
+  border-radius: 3px;
+}
+
+.formbold-btn {
+  font-size: 16px;
+  border-radius: 20px;
+  padding: 14px 25px;
+  border: none;
+  font-weight: 500;
+  background-color: #ad000d;
+  color: white;
+  margin-top: 25px;
+  width: 100%;
+}
+.formbold-btn-line {
+  font-size: 16px;
+  border-radius: 20px;
+  padding: 14px 25px;
+  border: 1px solid #ad000d;
+  font-weight: 500;
+  color: #ad000d;
+  margin-top: 25px;
+  width: 100%;
+}
+.centered-div {
+  display: flex;
+  justify-content: center; /* Centrado horizontal */
+  align-items: center; /* Centrado vertical */
+  height: 100%; /* Asegura que el div ocupe el alto completo del contenedor */
+}
+.p-clave {
+  color: #ad000d;
+  text-align: center;
 }
