Aplicacion terminda login y home

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,11 +4,10 @@
       <img src="/assets/logo.png" alt="Bienvendio" class="img-welcome" />
     </div>
     <div class="div-child">
-      <h2>Bienvenido al relevamiento visual</h2>
+      <h2>Bienvenido a la aplicación de Relevamiento Visual</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime cumque
-        iure, numquam eveniet voluptatibus pariatur? Dicta itaque non beatae
-        saepe porro
+        Nuestra app te permite compartir fotos de lo que te gusta y lo que no
+        del edificio. ¡Vota por las mejores y peores cosas y ve los resultados!
       </p>
     </div>
     <div class="div-child">
@@ -18,7 +17,7 @@
         expand="full"
         class="mb-3"
         routerLink="/login"
-        >Iniciar Sesión</ion-button
+        >Cosas Lindas</ion-button
       >
       <ion-button
         shape="round"
@@ -26,7 +25,7 @@
         color="danger"
         expand="full"
         routerLink="/registro"
-        >Crear Cuenta</ion-button
+        >Cosas Feas</ion-button
       >
     </div>
   </div>
