--- a/src/global.scss
+++ b/src/global.scss
@@ -38,8 +38,8 @@
 
 body {
   font-family: Roboto, sans-serif;
-  background-color: #f7fff7;
-  color: #1a535c;
+  background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
+  color: #f7fff7;
 }
 
 .mb-3 {
@@ -93,7 +93,7 @@ body {
   margin: 0 auto;
   max-width: 570px;
   width: 100%;
-  background-color: #f7fff7;
+  // background-color: black;
   padding: 40px;
 }
 
@@ -127,88 +127,69 @@ body {
   width: 100%;
   padding: 13px 22px;
   border-radius: 5px;
-  border: 1px solid #dde3ec;
-  background: #f7fff7;
+  border: 1px solid #af40ff;
+  background: rgba(151, 65, 252, 0.2);
   font-weight: 500;
   font-size: 16px;
-  color: #536387;
   outline: none;
   resize: none;
 }
 .formbold-form-input:focus {
-  border-color: #ad000d;
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+  border-color: #2f176e;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  background-color: #2f176e;
 }
 .formbold-form-label {
-  color: #536387;
   font-size: 14px;
   line-height: 24px;
   display: block;
   margin-bottom: 10px;
 }
 
-.formbold-checkbox-label {
-  display: flex;
-  cursor: pointer;
-  user-select: none;
-  font-size: 16px;
-  line-height: 24px;
-}
-.formbold-checkbox-label a {
-  margin-left: 5px;
-  color: #ad000d;
-}
-.formbold-input-checkbox {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-.formbold-checkbox-inner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 20px;
-  height: 20px;
-  margin-right: 16px;
-  margin-top: 2px;
-  border: 0.7px solid #dde3ec;
-  border-radius: 3px;
-}
-
-.formbold-btn {
-  font-size: 16px;
-  border-radius: 20px;
-  padding: 14px 25px;
-  border: none;
-  font-weight: 500;
-  background-color: #ad000d;
-  color: white;
-  margin-top: 25px;
-  width: 100%;
-}
-.formbold-btn-line {
-  font-size: 16px;
-  border-radius: 20px;
-  padding: 14px 25px;
-  border: 1px solid #ad000d;
-  font-weight: 500;
-  color: #ad000d;
-  margin-top: 25px;
-  width: 100%;
-}
 .centered-div {
   display: flex;
   justify-content: center; /* Centrado horizontal */
   align-items: center; /* Centrado vertical */
   height: 100%; /* Asegura que el div ocupe el alto completo del contenedor */
 }
-.p-clave {
-  color: #ad000d;
-  text-align: center;
+
+.btn {
+  width: 100%;
+  align-items: center;
+  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #ffffff;
+  display: flex;
+  font-size: 18px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.btn span {
+  background-color: rgb(5, 6, 45);
+  padding: 16px 24px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.btn-violet {
+  padding: 10px 22px;
+  border-radius: 6px;
+  border: none;
+  background-color: #7d2ae8;
 }
