Splash icono , login y home con estilos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,32 +1,23 @@
-<ion-content>
-  <div class="container-menu">
-    <div class="div-child div-img">
-      <img src="/assets/logo.png" alt="Bienvendio" class="img-welcome" />
-    </div>
-    <div class="div-child">
-      <h2>Bienvenido a la aplicación de Relevamiento Visual</h2>
-      <p>
-        Nuestra app te permite compartir fotos de lo que te gusta y lo que no
-        del edificio. ¡Vota por las mejores y peores cosas y ve los resultados!
-      </p>
-    </div>
-    <div class="div-child">
-      <ion-button
-        shape="round"
-        color="danger"
-        expand="full"
-        class="mb-3"
-        routerLink="/login"
-        >Cosas Lindas</ion-button
-      >
-      <ion-button
-        shape="round"
-        fill="outline"
-        color="danger"
-        expand="full"
-        routerLink="/registro"
-        >Cosas Feas</ion-button
-      >
-    </div>
+<div class="container-menu">
+  <div class="div-child div-img">
+    <img src="/assets/logo.png" alt="Bienvendio" class="img-welcome" />
   </div>
-</ion-content>
+  <div class="div-child">
+    <div class="text-luz">
+      <h2>Bienvenido</h2>
+    </div>
+    <p>
+      Nuestra aplicación te permite compartir fotos de lo que te gusta y lo que
+      no del edificio. ¡Vota por las mejores y peores cosas y ve los resultados!
+    </p>
+  </div>
+  <div class="div-child">
+    <button class="btn mb-3">
+      <span> Cosas Lindas </span>
+    </button>
+
+    <button class="btn mb-3">
+      <span> Cosas Feas </span>
+    </button>
+  </div>
+</div>
