--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,8 +4,8 @@
       <div class="justify-center">
         <img src="assets/logo.png" alt="icono" class="img-icon" />
       </div>
-      <div class="formbold-form-title">
-        <h2 class="">Iniciar sesión</h2>
+      <div class="formbold-form-title text-luz">
+        <h2>Iniciar sesión</h2>
       </div>
       <div class="formbold-mb-3">
         <label for="address" class="formbold-form-label"> Correo</label>
