--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -1,4 +1,4 @@
-<div class="padre">
+<div class="padre text-luz">
   <div class="container">
     <h2>FEDERICO CARDOZO</h2>
     <img src="assets/splash.png" />
