Guards funcionando para no dejar salir/entrar del login y para no dejar salir de home

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -37,7 +37,7 @@
           Clari
         </button>
       </div>
-      <button class="btn" (click)="validarSesion()">
+      <button class="btn" (click)="acceder()">
         <span>Iniciar Sesión</span>
       </button>
     </form>
