primera parte terminada

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
       <span> Cosas Lindas </span>
     </button>
 
-    <button class="btn mb-3" (click)="cerrarSesion()">
+    <button class="btn mb-3">
       <span> Cosas Feas </span>
     </button>
   </div>
