--- a/src/app/pages/cosas-lindas/cosas-lindas.page.html
+++ b/src/app/pages/cosas-lindas/cosas-lindas.page.html
@@ -3,7 +3,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-row class="ion-justify-content-around">
-      <button>
+      <button routerLink="/mis-imagenes">
         Mis imagenes
         <i class="fa-solid fa-images"></i>
       </button>
@@ -30,8 +30,12 @@
     </ion-card-content>
     <div class="div-btns">
       <ion-card-subtitle>Fecha: {{item.fecha}}</ion-card-subtitle>
-      <ion-button shape="round" color="tertiary">
+      <ion-button shape="round" color="tertiary" fill="outline">
+        @if(true) {
         <i class="fa-regular fa-heart"></i>
+        } @else {
+        <i class="fa-solid fa-heart"></i>
+        }
       </ion-button>
     </div>
   </ion-card>
