--- a/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.scss
+++ b/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.scss
@@ -1,11 +1,3 @@
-button {
-  padding: 10px 22px;
-  border-radius: 6px;
-  border: none;
-  background-color: #7d2ae8;
-  height: 100%;
-}
-
 .m-0 {
   margin: 0;
 }
@@ -26,7 +18,7 @@ ion-card-content {
 
 .div-btns {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   height: 60px;
 }
