Antes de cambiar firebase

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,11 +20,11 @@
     </p>
   </div>
   <div class="div-child">
-    <button class="btn mb-3" routerLink="/cosas-lindas">
+    <button class="btn mb-3" (click)="subirCosasLindas()">
       <span> Cosas Lindas </span>
     </button>
 
-    <button class="btn mb-3" routerLink="/cosas-feas">
+    <button class="btn mb-3" (click)="subirCosasFeas()">
       <span> Cosas Feas </span>
     </button>
   </div>
