--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,4 @@
+@if(!this.ocultarHome) {
 <header>
   @if(this.auth.correo && this.auth.splash) {
   <ion-button color="danger" (click)="cerrarSesion()">
@@ -29,3 +30,4 @@
     </button>
   </div>
 </div>
+}
