--- a/src/app/pages/cosas-lindas/cosas-lindas.page.html
+++ b/src/app/pages/cosas-lindas/cosas-lindas.page.html
@@ -1,5 +1,3 @@
-@if(this.fire.termino) {
-
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-row class="ion-justify-content-around">
@@ -16,7 +14,7 @@
 </ion-header>
 
 <ion-content>
-  @for (item of this.fire.array; track $index) {
+  @for (item of this.imagenes; track $index) {
 
   <ion-card>
     <ion-card-header>
@@ -25,11 +23,11 @@
 
     <ion-card-content>
       <div class="img">
-        <img [src]="item.path" alt="" />
+        <img [src]="item.path" />
       </div>
     </ion-card-content>
     <div class="div-btns">
-      <ion-card-subtitle>Fecha: {{item.fecha}}</ion-card-subtitle>
+      <ion-card-subtitle>Fecha: {{item.convertirFecha()}}</ion-card-subtitle>
       <ion-button shape="round" color="tertiary" fill="outline">
         @if(true) {
         <i class="fa-regular fa-heart"></i>
@@ -41,4 +39,3 @@
   </ion-card>
   }
 </ion-content>
-}
