--- a/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.scss
+++ b/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.scss
@@ -1,3 +1,11 @@
+button {
+  padding: 10px 22px;
+  border-radius: 6px;
+  border: none;
+  background-color: #7d2ae8;
+  height: 100%;
+}
+
 .m-0 {
   margin: 0;
 }
@@ -5,10 +13,12 @@
 img {
   height: 350px;
   width: 90%;
+  object-fit: contain;
 }
 
 ion-card-content {
   padding: 0;
+  padding-bottom: 20px;
 }
 
 .img {
