Probando nueva funcionalidad

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,13 +21,14 @@
     </p>
   </div>
   <div class="div-child">
-    <button class="btn mb-3" (click)="subirCosasLindas()">
+    <button class="btn mb-3" routerLink="/cosas-lindas">
       <span> Cosas Lindas </span>
     </button>
 
-    <button class="btn mb-3" (click)="subirCosasFeas()">
+    <button class="btn mb-3" routerLink="/cosas-feas">
       <span> Cosas Feas </span>
     </button>
   </div>
 </div>
+
 }
