--- a/src/app/pages/cosas-lindas/cosas-lindas.page.html
+++ b/src/app/pages/cosas-lindas/cosas-lindas.page.html
@@ -13,6 +13,7 @@
   </ion-toolbar>
 </ion-header>
 
+<app-camara></app-camara>
 <ion-content>
   @for (item of this.imagenes; track $index) {
   <ion-card>
