App terminada por el momento

--- a/src/app/pages/cosas-feas/mis-imagenes-feas/mis-imagenes-feas.page.html
+++ b/src/app/pages/cosas-feas/mis-imagenes-feas/mis-imagenes-feas.page.html
@@ -5,7 +5,7 @@
         Imagenes
         <i class="fa-solid fa-images"></i>
       </button>
-      <button>
+      <button routerLink="/barra">
         Graficos
         <i class="fa-solid fa-chart-simple"></i>
       </button>
