--- a/src/app/pages/cosas-feas/cosas-feas.page.html
+++ b/src/app/pages/cosas-feas/cosas-feas.page.html
@@ -5,7 +5,7 @@
         Mis imagenes
         <i class="fa-solid fa-images"></i>
       </button>
-      <button>
+      <button routerLink="/barra">
         Graficos
         <i class="fa-solid fa-chart-simple"></i>
       </button>
