--- a/src/app/pages/cosas-lindas/cosas-lindas.page.html
+++ b/src/app/pages/cosas-lindas/cosas-lindas.page.html
@@ -5,7 +5,7 @@
         Mis imagenes
         <i class="fa-solid fa-images"></i>
       </button>
-      <button>
+      <button routerLink="/pie">
         Graficos
         <i class="fa-solid fa-chart-pie"></i>
       </button>
