--- a/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.html
+++ b/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.html
@@ -5,7 +5,7 @@
         Imagenes
         <i class="fa-solid fa-images"></i>
       </button>
-      <button>
+      <button routerLink="/pie">
         Graficos
         <i class="fa-solid fa-chart-pie"></i>
       </button>
