--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,29 +1,19 @@
 .container-menu {
-  min-height: 90vh;
+  min-height: 100vh;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
-.div-child {
-  padding: 20px;
-  text-align: center;
-}
-.div-img {
-  padding: 30% 20px 0 20px;
-}
-.img-welcome {
-  width: 60%;
-}
-
-.div-child h2 {
-  font-size: 28px;
-  font-weight: 700;
-}
-.div-child p {
-  font-size: 14px;
-}
 header {
   display: flex;
   justify-content: end;
+}
+
+.btn-home {
+  width: 100%;
+  height: 100%;
+  font-size: 3rem;
+  font-weight: 900;
 }
