--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,6 +6,15 @@
   }
 </header> -->
 
+<ion-fab vertical="top" horizontal="end">
+  <ion-fab-button (click)="cerrarSesion()" color="light">
+    <i
+      class="fa-solid fa-arrow-right-from-bracket fa-lg"
+      style="color: #fc0303"
+    ></i>
+  </ion-fab-button>
+</ion-fab>
+
 <div class="container-menu">
   <ion-button
     routerLink="/cosas-lindas"
