--- a/src/app/pages/barra/barra.page.html
+++ b/src/app/pages/barra/barra.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar>
     <ion-row class="ion-justify-content-around">
       <button routerLink="/mis-imagenes">
-        mis-imagenes-feas
+        Mis imágenes
         <i class="fa-solid fa-images"></i>
       </button>
       <button routerLink="/cosas-lindas">
-        cosas-feas
+        Imágenes
         <i class="fa-solid fa-images"></i>
       </button>
     </ion-row>
