--- a/src/app/pages/cosas-feas/mis-imagenes-feas/mis-imagenes-feas.page.html
+++ b/src/app/pages/cosas-feas/mis-imagenes-feas/mis-imagenes-feas.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar>
     <ion-row class="ion-justify-content-around">
       <button routerLink="/cosas-feas">
-        Imagenes
+        Imágenes
         <i class="fa-solid fa-images"></i>
       </button>
       <button routerLink="/barra">
-        Graficos
+        Gráficos
         <i class="fa-solid fa-chart-simple"></i>
       </button>
     </ion-row>
