--- a/src/app/pages/cosas-lindas/cosas-lindas.page.html
+++ b/src/app/pages/cosas-lindas/cosas-lindas.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar>
     <ion-row class="ion-justify-content-around">
       <button routerLink="/mis-imagenes">
-        Mis imagenes
+        Mis imágenes
         <i class="fa-solid fa-images"></i>
       </button>
       <button routerLink="/pie">
-        Graficos
+        Gráficos
         <i class="fa-solid fa-chart-pie"></i>
       </button>
     </ion-row>
