--- a/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.html
+++ b/src/app/pages/cosas-lindas/mis-imagenes/mis-imagenes.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar>
     <ion-row class="ion-justify-content-around">
       <button routerLink="/cosas-lindas">
-        Imagenes
+        Imágenes
         <i class="fa-solid fa-images"></i>
       </button>
       <button routerLink="/pie">
-        Graficos
+        Gráficos
         <i class="fa-solid fa-chart-pie"></i>
       </button>
     </ion-row>
