--- a/src/app/pages/pie/pie.page.html
+++ b/src/app/pages/pie/pie.page.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <main>
-    <h2>Grafico de las fotos con más votos</h2>
+    <h2>Gráfico de las fotos con más votos</h2>
     <canvas id="chart">{{ this.chart }}</canvas>
   </main>
 </ion-content>
